@@ -1,3 +1,9 @@
+2005-05-25  Edward Hervey  <bilboed@bilboed.com>
+
+	* gnl/gnlsource.c: (source_queue_media): 
+	missing closing parenthisis
+	removed unused 'filled' variable
+
 2005-05-25  Wouter Paesen <wouter@kangaroot.net>
 
 	Reviewed by : Edward Hervey  <bilboed@bilboed.com>
